added buttons to html and styled it with css, used DOM manipulation to run a single round of RPS whenever we press a button

--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="RPS.js">
+    <script src="RPS.js" defer>
     </script>
 </head>
 
 <body>
+    <div class="buttons">
+        <button>Rock</button>
+        <button>Paper</button>
+        <button>Scissors</button>
+    </div>
 
 </body>
 
