styled the button , displayed the resulting message for each round, displayed the running total for both comp and player , on reaching specific number stop displaying the running total and instead displayed a final message

--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
 </head>
 
 <body>
+
     <div class="buttons">
         <button>Rock</button>
         <button>Paper</button>
         <button>Scissors</button>
     </div>
+    <div class="score">
+        <div class="player"></div>
+        <div class="comp"></div>
+    </div>
+
 
 </body>
 
