added the play again button which refreshes the page and when anyone reaches 5 points the text contents are set to blank string to stimulate a non responsive page forcing user to click on play again

--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
 
 <body>
 
-    <div class="buttons">
-        <button>Rock</button>
-        <button>Paper</button>
-        <button>Scissors</button>
-    </div>
+    
     <div class="score">
         <div class="player"></div>
         <div class="comp"></div>
     </div>
+    <div class="buttons">
+        <button class="choice">Rock</button>
+        <button class="choice">Paper</button>
+        <button class="choice">Scissors</button>
+    </div>
+    <div class="refresh"><button>PLAY AGAIN</button></div>
 
 
 </body>
